--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 </head>
-<body class="body">
-<div class="container">
+<body>
+
 <header>
     <div class="aloha">
         <img src="images/aloha-logo.svg" alt="Aloha logo">
@@ -25,9 +25,9 @@
         <a href="#features">FEATURES</a>
         <a href="#updates">UPDATES</a>
     </nav>
-<div class="cart">
-    <img src="images/cart-icon.svg" alt="shopping bag">
-</div>
+    <div class="cart">
+        <img src="images/cart-icon.svg" alt="shopping bag">
+    </div>
 </header>
 
 <section class="banner">
@@ -62,7 +62,7 @@
         </div>
 </section>
    
-<section id="features">
+<section class="features" id="features">
     <h2><span>Most-Loved</span> Products</h2>
 </section>
 <div class="carousel">
@@ -155,6 +155,6 @@
 <script src="jquery.js"></script>
 <script src="scripts.js"></script>
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-</div>
+
 </body>
 </html>
